# directory-watcher

./: .appveyor.yml  .gitignore  CMakeLists.txt  LICENSE  README.md
src/: .gitignore  directory-watcher.pro  main.cpp
src/controller/: mainwindow_controller.cpp
src/model/: change_entry.cpp  directory_watcher.h  directory_watcher_worker.cpp  directory_watcher_worker.h  file_operations.h  ordered_set.h  path.h  qt_directory_watcher_worker.h
src/model/windows/: ci_char_traits.cpp  directory_watcher.cpp  file_operations.cpp  hashes.cpp  path.cpp  win_extend_path_limit.h
src/view/: mainwindow.cpp  mainwindow.h  mainwindow.ui
